pkg structure, position and geom

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,40 @@
 Package: jitter2D
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title:  2D jittered scatterplot
+Version: 0.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+  c(person(given = "Natalia",
+           family = "da Silva",
+           role = c("aut", "cre"),
+           email = "natalia.dasilva@fcea.edu.uy",
+           comment = c(ORCID = "https://orcid.org/0000-0002-6031-7451")),
+           person(given = "Ignacio",
+           family = "Alvarez-Castro",
+           role = "aut",
+           email = "ignacio.alvarez@fcea.edu.uy"
+           ),
+          person(given = "Dianne",
+           family = "Cook",
+           role = "aut",
+           email = "dicook@monash.edu"
+           )
+  )         
+Maintainer: Natalia da Silva <natalia.dasilva@fcea.edu.uy>
+Description:2D jittered scatterplot.
+License: GPL (>= 2)
+URL: https://github.com/natydasilva/jitter2D
+LazyData: yes
+Depends:
+    R (>= 4.3.0)
+Imports:
+    ggplot2,
+    dplyr,
+    mvtnorm,
+    rngWELL,
+    randtoolbox
+Suggests:
+    knitr,
+    RColorBrewer,
+    roxygen2 (>= 7.3.0),
+    rmarkdown, 
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
