--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,12 +24,13 @@ License: GPL (>= 2)
 URL: https://github.com/natydasilva/jitter2D
 LazyData: yes
 Depends:
-    R (>= 4.5.0),
-      ggplot2
+    R (>= 4.4.0)
 Imports:
     cli,
     mvtnorm,
-    stats
+    stats,
+    rlang,
+    ggplot2
 Suggests:
     knitr,
     RColorBrewer,
