--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 export(PositionJittergauss)
 export(PositionJitterquasi)
+export(PositionJitterquasiloc)
 export(geom_jitter_gauss)
 export(geom_jitter_quasi)
+export(geom_jitter_quasiloc)
 export(position_jitter_gauss)
 export(position_jitter_quasi)
+export(position_jitter_quasiloc)
