--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(PositionJitterquasiloc)
 export(geom_jitter_gauss)
 export(geom_jitter_quasi)
 export(geom_jitter_quasiloc)
+export(geom_jitter_quasitog)
 export(position_jitter_gauss)
 export(position_jitter_quasi)
 export(position_jitter_quasiloc)
+export(position_jitter_quasitog)
