--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: 3.6.3
 pkgdown: 2.1.3
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-11-19T12:17Z
+last_built: 2025-11-19T12:28Z
+urls:
+  reference: https://github.com/natydasilva/jitter2D/reference
+  article: https://github.com/natydasilva/jitter2D/articles
