--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 3.6.3
-pkgdown: 2.1.3
+pandoc: '3.4'
+pkgdown: 2.2.0
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-11-19T14:49Z
+last_built: 2025-11-19T21:14Z
 urls:
   reference: https://github.com/natydasilva/jitter2D/reference
   article: https://github.com/natydasilva/jitter2D/articles
